[package]
name = "solana-aggregator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aggregator"
path = "src/aggregator.rs"

[[bin]]
name = "rest_server"
path = "src/rest_server.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
clap = { version = "4.5.10", features = ["derive"] }
futures-util = "0.3.30"
nanodb = "0.4.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.120"
solana-client = "2.0.2"
solana-program = "2.0.3"
solana-transaction-status = "2.0.3"
tokio = "1.38.0"
